git-svn-id: svn://svn.code.sf.net/p/justniffer/code/trunk@110 1140968e-e2c7-4c3d-a3be-3139d5afca7e

--- a/doc/web/justniffer.css
+++ b/doc/web/justniffer.css
@@ -97,7 +97,7 @@ iframe
                     width:100%;
                     border-top:solid 1px  #0069ff;
             }
-			div.tooltip span.highlight
+			span.highlight
 			{
 				padding-left:4px;
 				padding-right:4px;
