web docs updated
git-svn-id: svn://svn.code.sf.net/p/justniffer/code/trunk@165 1140968e-e2c7-4c3d-a3be-3139d5afca7e

--- a/doc/web/justniffer.css
+++ b/doc/web/justniffer.css
@@ -70,11 +70,18 @@ iframe
             }
 			h2
 			{
-				margin-top:60px;
+				margin-top:30px;
 			}
+            h2.body
+                        {
+				margin-top:4px;
+                font-weight: normal;
+                font-size: 1em;
+            }
+
 			h3
 			{
-				margin-top:40px;
+				margin-top:20px;
 			}
             .home br
             {
