--- a/doc/web/justniffer.css
+++ b/doc/web/justniffer.css
@@ -30,7 +30,7 @@ iframe
 			}
 			table.comparison caption
 			{
-				background-color: #dcdcff;
+				background-color: #EFFCFF;
 				font-weight:bold;
 				padding:6px;
 				border-top:solid 1px blue;
@@ -49,7 +49,7 @@ iframe
 			.featurename
 			{
 				font-weight:bold;
-				background-color: #dcdcff;
+				background-color: #EFFCFF;
 			}	
 			.featurevalue
 			{
